--- a/index.html
+++ b/index.html
@@ -3,182 +3,264 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Developer Santiago</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <title>Interactive Developer Bio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            display: flex;
-            min-height: 100vh;
-            font-family: 'Roboto', sans-serif;
-            background-color: #fff5e6;
-            color: #333;
-            flex-direction: column;
-            text-align: left;
+            font-family: Arial, sans-serif;
+            transition: background-color 0.3s, color 0.3s;
+            text-align: center;
+            margin-top: 50px;
         }
-        .sidebar {
-            width: 250px;
-            background: #ff9800;
-            color: white;
-            padding: 20px;
-        }
-        .content {
-            flex-grow: 1;
-            padding: 20px;
-        }
-        .meme-generator {
-            margin-top: 20px;
-        }
-        .meme-image {
+
+        img.center-image {
             max-width: 100%;
-            border-radius: 15px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
         }
-        #seaCanvas {
+
+        /* Color and typography modes */
+        .light-mode { background-color: #f0f0f0; color: #333; }
+        .dark-mode { background-color: #333; color: #f0f0f0; }
+        .unicorn-mode { background-color: #ff66cc; color: #fff; }
+        .solarized-mode { background-color: #002b36; color: #839496; }
+        .gothic-mode { background-color: #1e1e1e; color: #b0b0b0; }
+        .neon-mode { background-color: #39ff14; color: #000; }
+        .pastel-mode { background-color: #ffb3ba; color: #000; }
+        .ocean-mode { background-color: #5b9bd5; color: #fff; }
+
+        /* Typography Modes */
+        .gothic-font { font-family: "Gothic", sans-serif; }
+        .roman-font { font-family: "Times New Roman", serif; }
+        .sans-serif-font { font-family: "Arial", sans-serif; }
+        .console-font { font-family: "Courier New", monospace; }
+
+        /* Bio Section */
+        .bio-section {
+            text-align: left;
+            margin: 20px;
+        }
+
+        /* Toggle Buttons */
+        .toggle-container {
             position: fixed;
-            bottom: 0;
-            width: 100%;
-            height: 150px;
-            background: #87CEFA;
+            left: 10px;
+            bottom: 10px;
         }
-        .fibonacci {
-            margin-bottom: 1.618em; /* Fibonacci-based spacing */
+
+        .toggle-row {
+            margin-bottom: 10px;
         }
-        .dark-mode {
-            background-color: #333;
-            color: #fff;
+
+        footer {
+            margin-top: 20px;
+            text-align: center;
         }
-        .gothic-mode {
-            font-family: 'Garamond', serif;
-            background-color: #444;
-            color: #fff;
-        }
-        .clean-mode {
-            background-color: #ffffff;
-            color: #000;
-        }
-        .bauhaus-mode {
-            font-family: 'Helvetica', sans-serif;
-            background-color: #E0E0E0;
-            color: #333;
-        }
-        .unicorn-pink-mode {
-            background-color: #F8B8D1;
-            color: #900C3F;
-        }
+
     </style>
 </head>
 <body>
-    <div class="content">
+
+    <!-- Bio Section -->
+    <div class="bio-section">
         <h1>Interactive Developer Santiago</h1>
-        <img src="assets/00000000000000.PNG" alt="Salutation Image" style="width:300px; border-radius:15px;">
+        <p>Salutation Image</p>
         <p>Projects on Computer Vision and Text-Based Apps.</p>
         <p>Certified in C++, Swift, and Objective-C.</p>
-        
-        <p><a href="mailto:sakayama2343@icloud.com">Email Me</a></p>
 
-        <div class="meme-generator fibonacci">
-            <h3>Generate Meme</h3>
-            <button class="btn btn-primary" id="generateQuote">Get Quote</button>
-            <input type="text" id="fileName" placeholder="Enter meme name" class="form-control my-2">
-            <button class="btn btn-success" id="saveMeme">Save to Desktop</button>
-            <div id="quoteContainer" class="my-3">
-                <img id="memeImage" class="meme-image" src="https://via.placeholder.com/500x300?text=Choose+a+Background+Image" alt="Meme Image">
-                <p id="quoteText"></p>
-            </div>
-        </div>
-
-        <button class="btn btn-dark" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-        <button class="btn btn-dark" onclick="toggleGothicMode()">Toggle Gothic Mode</button>
-        <button class="btn btn-dark" onclick="toggleCleanMode()">Toggle Clean Mode</button>
-        <button class="btn btn-dark" onclick="toggleBauhausMode()">Toggle Bauhaus Mode</button>
-        <button class="btn btn-dark" onclick="toggleUnicornPinkMode()">Toggle Unicorn Pink Mode</button>
+        <img class="center-image" src="000000.jpg" alt="Result of my work">
     </div>
 
-    <canvas id="seaCanvas"></canvas>
+    <!-- Quote Section -->
+    <div id="quoteSection">
+        <p id="quoteText">"The only way to do great work is to love what you do."</p>
+        <p id="quoteAuthor">- Steve Jobs</p>
+        <button id="quoteButton" class="btn btn-primary">Get New Quote</button>
+    </div>
+
+    <!-- Color and Typography Modes -->
+    <div class="toggle-container">
+        <div class="toggle-row">
+            <h4>Color Modes:</h4>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="lightModeBtn" checked>
+                <label class="form-check-label" for="lightModeBtn">Light</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="darkModeBtn">
+                <label class="form-check-label" for="darkModeBtn">Dark</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="unicornModeBtn">
+                <label class="form-check-label" for="unicornModeBtn">Unicorn</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="solarizedModeBtn">
+                <label class="form-check-label" for="solarizedModeBtn">Solarized</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="gothicModeBtn">
+                <label class="form-check-label" for="gothicModeBtn">Gothic</label>
+            </div>
+        </div>
+        
+        <div class="toggle-row">
+            <h4>Typography Modes:</h4>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="gothicFontBtn">
+                <label class="form-check-label" for="gothicFontBtn">Gothic Font</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="romanFontBtn">
+                <label class="form-check-label" for="romanFontBtn">Roman Font</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="sansSerifFontBtn">
+                <label class="form-check-label" for="sansSerifFontBtn">Sans-Serif Font</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="consoleFontBtn">
+                <label class="form-check-label" for="consoleFontBtn">Console Font</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer with Email -->
+    <footer>
+        <p>Contact me: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    </footer>
 
     <script>
-        const memeImage = document.getElementById("memeImage");
-        const quoteText = document.getElementById("quoteText");
+        // Array of quotes
+       const quotes = [
+            { quote: "In the end, we will remember not the words of our enemies, but the silence of our friends.", author: "Martin Luther King Jr." },
+            { quote: "To be, or not to be, that is the question.", author: "William Shakespeare" },
+            { quote: "The only way to deal with this life meaningfully is to find one's passion.", author: "Mark Twain" },
+            { quote: "Music can change the world because it can change people.", author: "Bono" },
+            { quote: "The greatest wealth is to live content with little.", author: "Plato" },
+            { quote: "You must be the change you wish to see in the world.", author: "Mahatma Gandhi" },
+            { quote: "It is never too late to be what you might have been.", author: "George Eliot" },
+            { quote: "Do not go where the path may lead, go instead where there is no path and leave a trail.", author: "Ralph Waldo Emerson" },
+            { quote: "Be the change that you wish to see in the world.", author: "Mahatma Gandhi" },
+            { quote: "Success is not final, failure is not fatal: It is the courage to continue that counts.", author: "Winston Churchill" },
+            { quote: "The best way to predict the future is to invent it.", author: "Alan Kay" },
+            { quote: "Life is what happens when you're busy making other plans.", author: "John Lennon" },
+            { quote: "Keep your face always toward the sunshine—and shadows will fall behind you.", author: "Walt Whitman" },
+            { quote: "Success usually comes to those who are too busy to be looking for it.", author: "Henry David Thoreau" },
+            { quote: "You have as many hours in the day as Beyoncé.", author: "Unknown" },
+            { quote: "If you want to go fast, go alone. If you want to go far, go together.", author: "African Proverb" },
+            { quote: "Don't watch the clock; do what it does. Keep going.", author: "Sam Levenson" },
+            { quote: "Do one thing every day that scares you.", author: "Eleanor Roosevelt" },
+            { quote: "Believe you can and you're halfway there.", author: "Theodore Roosevelt" },
+            { quote: "Strive not to be a success, but rather to be of value.", author: "Albert Einstein" },
+            { quote: "The purpose of life is not to be happy. It is to be useful, to be honorable, to be compassionate, to have it make some difference that you have lived and lived well.", author: "Ralph Waldo Emerson" },
+            { quote: "Your time is limited, so don’t waste it living someone else’s life.", author: "Steve Jobs" },
+            { quote: "Everything you can imagine is real.", author: "Pablo Picasso" },
+            { quote: "The only impossible journey is the one you never begin.", author: "Tony Robbins" },
+            { quote: "You don’t have to be great to start, but you have to start to be great.", author: "Zig Ziglar" },
+            { quote: "Whether you think you can, or you think you can’t – you’re right.", author: "Henry Ford" },
+            { quote: "It does not matter how slowly you go as long as you do not stop.", author: "Confucius" },
+            { quote: "Act as if what you do makes a difference. It does.", author: "William James" },
+            { quote: "The only way to do great work is to love what you do.", author: "Steve Jobs" },
+            { quote: "Do what you can with all you have, wherever you are.", author: "Theodore Roosevelt" },
+            { quote: "The future belongs to those who believe in the beauty of their dreams.", author: "Eleanor Roosevelt" },
+            { quote: "You miss 100% of the shots you don’t take.", author: "Wayne Gretzky" },
+            { quote: "Life is 10% what happens to us and 90% how we react to it.", author: "Charles R. Swindoll" },
+            { quote: "The way to get started is to quit talking and begin doing.", author: "Walt Disney" },
+            { quote: "I find that the harder I work, the more luck I seem to have.", author: "Thomas Jefferson" },
+            { quote: "Nothing in the world can take the place of Persistence. Talent will not; nothing is more common than unsuccessful men with talent.", author: "Calvin Coolidge" },
+            { quote: "I am not a product of my circumstances. I am a product of my decisions.", author: "Stephen R. Covey" },
+            { quote: "The best revenge is massive success.", author: "Frank Sinatra" },
+            { quote: "Hardships often prepare ordinary people for an extraordinary destiny.", author: "C.S. Lewis" },
+            { quote: "Success is not how high you have climbed, but how you make a positive difference to the world.", author: "Roy T. Bennett" },
+            { quote: "In the middle of every difficulty lies opportunity.", author: "Albert Einstein" },
+            { quote: "Don't limit yourself. Many people limit themselves to what they think they can do. You can go as far as your mind lets you.", author: "Mary Kay Ash" }
+        ];
 
-        // Function to toggle Dark Mode
-        function toggleDarkMode() {
-            document.body.classList.toggle('dark-mode');
-        }
-
-        // Function to toggle Gothic Mode
-        function toggleGothicMode() {
-            document.body.classList.toggle('gothic-mode');
-        }
-
-        // Function to toggle Clean Mode
-        function toggleCleanMode() {
-            document.body.classList.toggle('clean-mode');
-        }
-
-        // Function to toggle Bauhaus Mode
-        function toggleBauhausMode() {
-            document.body.classList.toggle('bauhaus-mode');
-        }
-
-        // Function to toggle Unicorn Pink Mode
-        function toggleUnicornPinkMode() {
-            document.body.classList.toggle('unicorn-pink-mode');
-        }
-
-        // Function to generate meme with quote and image
-        async function generateMeme() {
-            const quote = await getBookQuote();
-            quoteText.innerText = quote;
-            memeImage.src = "https://via.placeholder.com/500x300?text=Sample+Meme+Image";
-        }
-
-        // Function to get a random quote from a public API
-        async function getBookQuote() {
-            try {
-                const response = await fetch('https://api.quotable.io/random?tags=books');
-                const data = await response.json();
-                return data.content;
-            } catch (error) {
-                console.error("Error fetching quote:", error);
-                return "Sorry, unable to fetch a quote at the moment.";
-            }
-        }
-
-        // Event Listener for the "Get Quote" button
-        document.getElementById("generateQuote").addEventListener("click", generateMeme);
-
-        // Save meme to desktop
-        document.getElementById("saveMeme").addEventListener("click", () => {
-            const fileName = document.getElementById("fileName").value || 'meme';
-            const canvas = document.createElement('canvas');
-            const ctx = canvas.getContext('2d');
-            canvas.width = memeImage.width;
-            canvas.height = memeImage.height;
-            ctx.drawImage(memeImage, 0, 0);
-            const dataUrl = canvas.toDataURL('image/png');
-            const a = document.createElement('a');
-            a.href = dataUrl;
-            a.download = `${fileName}.png`;
-            a.click();
+        // Display Random Quote on Button Click
+        document.getElementById('quoteButton').addEventListener('click', () => {
+            const randomIndex = Math.floor(Math.random() * quotes.length);
+            document.getElementById('quoteText').textContent = quotes[randomIndex].quote;
+            document.getElementById('quoteAuthor').textContent = `- ${quotes[randomIndex].author}`;
         });
 
-        // p5.js setup and draw functions
-        function setup() {
-            let canvas = createCanvas(windowWidth, 150);
-            canvas.parent('seaCanvas');
-            noFill();
-        }
-
-        function draw() {
-            background('#87CEFA');
-            stroke(255);
-            strokeWeight(2);
-            for (let i = 0; i < width; i += 20) {
-                let y = sin(frameCount * 0.05 + i * 0.05) * 10 + 100;
-                line(i, y, i, 150);
+        // Color Mode Toggle Functions
+        document.getElementById('lightModeBtn').addEventListener('change', () => {
+            if (document.getElementById('lightModeBtn').checked) {
+                document.body.className = 'light-mode';
+            } else {
+                document.body.className = '';
             }
-        }
+        });
+        document.getElementById('darkModeBtn').addEventListener('change', () => {
+            if (document.getElementById('darkModeBtn').checked) {
+                document.body.className = 'dark-mode';
+            } else {
+                document.body.className = '';
+            }
+        });
+        document.getElementById('unicornModeBtn').addEventListener('change', () => {
+            if (document.getElementById('unicornModeBtn').checked) {
+                document.body.className = 'unicorn-mode';
+            } else {
+                document.body.className = '';
+            }
+        });
+        document.getElementById('solarizedModeBtn').addEventListener('change', () => {
+            if (document.getElementById('solarizedModeBtn').checked) {
+                document.body.className = 'solarized-mode';
+            } else {
+                document.body.className = '';
+            }
+        });
+        document.getElementById('gothicModeBtn').addEventListener('change', () => {
+            if (document.getElementById('gothicModeBtn').checked) {
+                document.body.className = 'gothic-mode';
+            } else {
+                document.body.className = '';
+            }
+        });
+
+        // Typography Mode Toggle Functions
+        document.getElementById('gothicFontBtn').addEventListener('change', () => {
+            if (document.getElementById('gothicFontBtn').checked) {
+                document.body.className = 'gothic-font';
+            } else {
+                document.body.className = '';
+            }
+        });
+        document.getElementById('romanFontBtn').addEventListener('change', () => {
+            if (document.getElementById('romanFontBtn').checked) {
+                document.body.className = 'roman-font';
+            } else {
+                document.body.className = '';
+            }
+        });
+        document.getElementById('sansSerifFontBtn').addEventListener('change', () => {
+            if (document.getElementById('sansSerifFontBtn').checked) {
+                document.body.className = 'sans-serif-font';
+            } else {
+                document.body.className = '';
+            }
+        });
+        document.getElementById('consoleFontBtn').addEventListener('change', () => {
+            if (document.getElementById('consoleFontBtn').checked) {
+                document.body.className = 'console-font';
+            } else {
+                document.body.className = '';
+            }
+        });
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
 
