--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Developer Bio</title>
+    <title>Whois</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Arial", sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
             transition: background-color 0.3s, color 0.3s;
             text-align: center;
             margin-top: 50px;
@@ -20,21 +22,35 @@
             margin: 0 auto;
         }
 
-        /* Color and typography modes */
-        .light-mode { background-color: #f0f0f0; color: #333; }
-        .dark-mode { background-color: #333; color: #f0f0f0; }
-        .unicorn-mode { background-color: #ff66cc; color: #fff; }
-        .solarized-mode { background-color: #002b36; color: #839496; }
-        .gothic-mode { background-color: #1e1e1e; color: #b0b0b0; }
-        .neon-mode { background-color: #39ff14; color: #000; }
-        .pastel-mode { background-color: #ffb3ba; color: #000; }
-        .ocean-mode { background-color: #5b9bd5; color: #fff; }
+        /* Color Scheme */
+        .light-mode {
+            background-color: #f0f0f0;
+            color: #333;
+        }
 
-        /* Typography Modes */
-        .gothic-font { font-family: "Gothic", sans-serif; }
-        .roman-font { font-family: "Times New Roman", serif; }
-        .sans-serif-font { font-family: "Arial", sans-serif; }
-        .console-font { font-family: "Courier New", monospace; }
+        /* Left Menu Styles */
+        .menu {
+            position: fixed;
+            left: 10px;
+            top: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            z-index: 100;
+        }
+
+        .menu a {
+            color: #000;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .menu a:hover {
+            background-color: #ddd;
+        }
 
         /* Bio Section */
         .bio-section {
@@ -42,97 +58,52 @@
             margin: 20px;
         }
 
-        /* Toggle Buttons */
-        .toggle-container {
-            position: fixed;
-            left: 10px;
-            bottom: 10px;
-        }
-
-        .toggle-row {
-            margin-bottom: 10px;
-        }
-
+        /* Footer Section */
         footer {
             margin-top: 20px;
             text-align: center;
         }
 
+        .footer-quote {
+            font-style: italic;
+            margin-top: 10px;
+        }
+
     </style>
 </head>
-<body>
+<body class="light-mode">
+    <!-- Left Menu -->
+    <div class="menu">
+        <a href="#">About</a>
+        <a href="#">Repo</a>
+        <a href="#">Behance</a>
+        <a href="#">Music</a>
+        <a href="#">Instagram</a>
+    </div>
 
     <!-- Bio Section -->
     <div class="bio-section">
-        <h1>Interactive Developer Santiago</h1>
-        <p>Salutation Image</p>
-        <p>Projects on Computer Vision and Text-Based Apps.</p>
-        <p>Certified in C++, Swift, and Objective-C.</p>
-
-        <img class="center-image" src="000000.jpg" alt="Result of my work">
+        <h3>Interactivity developer from SCL</h3>
+        <p>Working on Computer Vision projects</p>
+        <p>Certifications in C++, Objective-C, and Swift languages</p>
+        <p>Email me to speak about projects at <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
+        <img class="center-image" src="00000000000000.PNG" alt="A Text and Image recognition image using Python">
     </div>
 
-    <!-- Quote Section -->
+    <!-- Quote Section (Generated Upon Refresh) -->
     <div id="quoteSection">
-        <p id="quoteText">"The only way to do great work is to love what you do."</p>
-        <p id="quoteAuthor">- Steve Jobs</p>
-        <button id="quoteButton" class="btn btn-primary">Get New Quote</button>
+        <p id="quoteText"></p>
+        <p id="quoteAuthor"></p>
     </div>
 
-    <!-- Color and Typography Modes -->
-    <div class="toggle-container">
-        <div class="toggle-row">
-            <h4>Color Modes:</h4>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="lightModeBtn" checked>
-                <label class="form-check-label" for="lightModeBtn">Light</label>
-            </div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="darkModeBtn">
-                <label class="form-check-label" for="darkModeBtn">Dark</label>
-            </div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="unicornModeBtn">
-                <label class="form-check-label" for="unicornModeBtn">Unicorn</label>
-            </div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="solarizedModeBtn">
-                <label class="form-check-label" for="solarizedModeBtn">Solarized</label>
-            </div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="gothicModeBtn">
-                <label class="form-check-label" for="gothicModeBtn">Gothic</label>
-            </div>
-        </div>
-        
-        <div class="toggle-row">
-            <h4>Typography Modes:</h4>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="gothicFontBtn">
-                <label class="form-check-label" for="gothicFontBtn">Gothic Font</label>
-            </div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="romanFontBtn">
-                <label class="form-check-label" for="romanFontBtn">Roman Font</label>
-            </div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="sansSerifFontBtn">
-                <label class="form-check-label" for="sansSerifFontBtn">Sans-Serif Font</label>
-            </div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="consoleFontBtn">
-                <label class="form-check-label" for="consoleFontBtn">Console Font</label>
-            </div>
-        </div>
-    </div>
-
-    <!-- Footer with Email -->
+    <!-- Footer Section with Random Quote -->
     <footer>
-        <p>Contact me: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        <div class="footer-quote" id="footerQuote"></div>
+        <p>&copy; All rights reserved</p>
     </footer>
 
     <script>
-        // Array of quotes
+  
        const quotes = [
             { quote: "In the end, we will remember not the words of our enemies, but the silence of our friends.", author: "Martin Luther King Jr." },
             { quote: "To be, or not to be, that is the question.", author: "William Shakespeare" },
@@ -178,84 +149,22 @@
             { quote: "Don't limit yourself. Many people limit themselves to what they think they can do. You can go as far as your mind lets you.", author: "Mary Kay Ash" }
         ];
 
-        // Display Random Quote on Button Click
-        document.getElementById('quoteButton').addEventListener('click', () => {
+        // Display Random Quote on Page Load
+        function displayRandomQuote() {
             const randomIndex = Math.floor(Math.random() * quotes.length);
-            document.getElementById('quoteText').textContent = quotes[randomIndex].quote;
+            document.getElementById('quoteText').textContent = `"${quotes[randomIndex].quote}"`;
             document.getElementById('quoteAuthor').textContent = `- ${quotes[randomIndex].author}`;
-        });
+            document.getElementById('footerQuote').textContent = `"${quotes[randomIndex].quote}" - ${quotes[randomIndex].author}`;
+        }
 
-        // Color Mode Toggle Functions
-        document.getElementById('lightModeBtn').addEventListener('change', () => {
-            if (document.getElementById('lightModeBtn').checked) {
-                document.body.className = 'light-mode';
-            } else {
-                document.body.className = '';
-            }
-        });
-        document.getElementById('darkModeBtn').addEventListener('change', () => {
-            if (document.getElementById('darkModeBtn').checked) {
-                document.body.className = 'dark-mode';
-            } else {
-                document.body.className = '';
-            }
-        });
-        document.getElementById('unicornModeBtn').addEventListener('change', () => {
-            if (document.getElementById('unicornModeBtn').checked) {
-                document.body.className = 'unicorn-mode';
-            } else {
-                document.body.className = '';
-            }
-        });
-        document.getElementById('solarizedModeBtn').addEventListener('change', () => {
-            if (document.getElementById('solarizedModeBtn').checked) {
-                document.body.className = 'solarized-mode';
-            } else {
-                document.body.className = '';
-            }
-        });
-        document.getElementById('gothicModeBtn').addEventListener('change', () => {
-            if (document.getElementById('gothicModeBtn').checked) {
-                document.body.className = 'gothic-mode';
-            } else {
-                document.body.className = '';
-            }
-        });
-
-        // Typography Mode Toggle Functions
-        document.getElementById('gothicFontBtn').addEventListener('change', () => {
-            if (document.getElementById('gothicFontBtn').checked) {
-                document.body.className = 'gothic-font';
-            } else {
-                document.body.className = '';
-            }
-        });
-        document.getElementById('romanFontBtn').addEventListener('change', () => {
-            if (document.getElementById('romanFontBtn').checked) {
-                document.body.className = 'roman-font';
-            } else {
-                document.body.className = '';
-            }
-        });
-        document.getElementById('sansSerifFontBtn').addEventListener('change', () => {
-            if (document.getElementById('sansSerifFontBtn').checked) {
-                document.body.className = 'sans-serif-font';
-            } else {
-                document.body.className = '';
-            }
-        });
-        document.getElementById('consoleFontBtn').addEventListener('change', () => {
-            if (document.getElementById('consoleFontBtn').checked) {
-                document.body.className = 'console-font';
-            } else {
-                document.body.className = '';
-            }
-        });
+        // Call display function upon page load
+        displayRandomQuote();
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
