--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whois</title>
+    <title>Interactive Developer Bio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -13,6 +13,7 @@
             transition: background-color 0.3s, color 0.3s;
             text-align: center;
             margin-top: 50px;
+            transition: font-size 0.2s ease;
         }
 
         img.center-image {
@@ -22,13 +23,6 @@
             margin: 0 auto;
         }
 
-        /* Color Scheme */
-        .light-mode {
-            background-color: #f0f0f0;
-            color: #333;
-        }
-
-        /* Left Menu Styles */
         .menu {
             position: fixed;
             left: 10px;
@@ -52,26 +46,92 @@
             background-color: #ddd;
         }
 
-        /* Bio Section */
-        .bio-section {
-            text-align: left;
-            margin: 20px;
+        /* Color Mode Classes */
+        .light-mode {
+            background-color: #f0f0f0;
+            color: #333;
         }
 
-        /* Footer Section */
+        .dark-mode {
+            background-color: #333;
+            color: #f0f0f0;
+        }
+
+        .minimal-mode {
+            background-color: #ffffff;
+            color: #333;
+        }
+
+        .unicorn-mode {
+            background-color: #f9c2d7;
+            color: #9c1a80;
+        }
+
+        .solarized-mode {
+            background-color: #002b36;
+            color: #b58900;
+        }
+
+        /* Typography */
+        .gothic-font {
+            font-family: "Gothic", sans-serif;
+        }
+
+        .roman-font {
+            font-family: "Times New Roman", serif;
+        }
+
+        .adidas-font {
+            font-family: "Arial", sans-serif;
+        }
+
+        .console-font {
+            font-family: "Courier New", monospace;
+        }
+
+        /* Sidebar with toggles */
+        .side-stripe {
+            position: fixed;
+            bottom: 10px;
+            left: 0;
+            z-index: 10;
+            background-color: black;
+            padding: 20px;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        /* Footer */
         footer {
             margin-top: 20px;
             text-align: center;
         }
 
-        .footer-quote {
-            font-style: italic;
-            margin-top: 10px;
+        /* Font Size */
+        .small-text {
+            font-size: 14px;
+        }
+
+        .medium-text {
+            font-size: 16px;
+        }
+
+        .large-text {
+            font-size: 18px;
+        }
+
+        .map-container {
+            height: 400px;
+            width: 100%;
+            margin-top: 30px;
         }
 
     </style>
 </head>
 <body class="light-mode">
+
     <!-- Left Menu -->
     <div class="menu">
         <a href="#">About</a>
@@ -79,18 +139,38 @@
         <a href="#">Behance</a>
         <a href="#">Music</a>
         <a href="#">Instagram</a>
+        <a href="#">What I Do</a>
     </div>
 
     <!-- Bio Section -->
     <div class="bio-section">
-        <h3>Interactivity developer from SCL</h3>
-        <p>Working on Computer Vision projects</p>
-        <p>Certifications in C++, Objective-C, and Swift languages</p>
-        <p>Email me to speak about projects at <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
-        <img class="center-image" src="00000000000000.PNG" alt="A Text and Image recognition image using Python">
+        <h1>Interactive Developer Santiago</h1>
+        <p>Working on computer vision projects</p>
+        <p>Certifications in C++, Objective-C, and Swift</p>
+        <p>Email me to speak about projects at <a href="mailto:CORREO">CORREO</a></p>
+        <img class="center-image" src="00000000000000.PNG" alt="A text reading app">
     </div>
 
-    <!-- Quote Section (Generated Upon Refresh) -->
+    <!-- Toggle Controls in the Side Stripe -->
+    <div class="side-stripe">
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="colorSwitch" onchange="toggleColorMode()">
+            <label class="form-check-label" for="colorSwitch">Toggle Color</label>
+        </div>
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="typographySwitch" onchange="toggleTypography()">
+            <label class="form-check-label" for="typographySwitch">Toggle Typography</label>
+        </div>
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="fontSizeSwitch" onchange="toggleFontSize()">
+            <label class="form-check-label" for="fontSizeSwitch">Toggle Font Size</label>
+        </div>
+    </div>
+
+    <!-- Map Section (Puente del Arzobispo Providencia) -->
+    <div id="map" class="map-container"></div>
+
+    <!-- Quote Section -->
     <div id="quoteSection">
         <p id="quoteText"></p>
         <p id="quoteAuthor"></p>
@@ -99,11 +179,13 @@
     <!-- Footer Section with Random Quote -->
     <footer>
         <div class="footer-quote" id="footerQuote"></div>
+        <button class="btn btn-primary" onclick="displayRandomQuote()">Q</button>
         <p>&copy; All rights reserved</p>
     </footer>
 
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly" async></script>
     <script>
-  
+
        const quotes = [
             { quote: "In the end, we will remember not the words of our enemies, but the silence of our friends.", author: "Martin Luther King Jr." },
             { quote: "To be, or not to be, that is the question.", author: "William Shakespeare" },
@@ -149,7 +231,11 @@
             { quote: "Don't limit yourself. Many people limit themselves to what they think they can do. You can go as far as your mind lets you.", author: "Mary Kay Ash" }
         ];
 
-        // Display Random Quote on Page Load
+
+        let currentFontSize = 'medium-text';
+        let currentColorMode = 'light-mode';
+        let currentTypography = 'adidas-font';
+
         function displayRandomQuote() {
             const randomIndex = Math.floor(Math.random() * quotes.length);
             document.getElementById('quoteText').textContent = `"${quotes[randomIndex].quote}"`;
@@ -157,11 +243,54 @@
             document.getElementById('footerQuote').textContent = `"${quotes[randomIndex].quote}" - ${quotes[randomIndex].author}`;
         }
 
-        // Call display function upon page load
-        displayRandomQuote();
+        function toggleColorMode() {
+            if (document.getElementById('colorSwitch').checked) {
+                document.body.classList.remove(currentColorMode);
+                document.body.classList.add('dark-mode');
+                currentColorMode = 'dark-mode';
+            } else {
+                document.body.classList.remove(currentColorMode);
+                document.body.classList.add('light-mode');
+                currentColorMode = 'light-mode';
+            }
+        }
+
+        function toggleTypography() {
+            if (document.getElementById('typographySwitch').checked) {
+                document.body.classList.remove(currentTypography);
+                document.body.classList.add('gothic-font');
+                currentTypography = 'gothic-font';
+            } else {
+                document.body.classList.remove(currentTypography);
+                document.body.classList.add('adidas-font');
+                currentTypography = 'adidas-font';
+            }
+        }
+
+        function toggleFontSize() {
+            if (document.getElementById('fontSizeSwitch').checked) {
+                document.body.classList.remove(currentFontSize);
+                document.body.classList.add('large-text');
+                currentFontSize = 'large-text';
+            } else {
+                document.body.classList.remove(currentFontSize);
+                document.body.classList.add('medium-text');
+                currentFontSize = 'medium-text';
+            }
+        }
+
+        function initMap() {
+            const map = new google.maps.Map(document.getElementById("map"), {
+                center: { lat: -33.4372, lng: -70.6506 }, // Coordinates for Puente del Arzobispo Providencia
+                zoom: 15,
+            });
+        }
+
+        window.onload = () => {
+            displayRandomQuote();
+        }
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
