--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,199 +6,153 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Developer Bio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
         body {
-            font-family: "Arial", sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            transition: background-color 0.3s, color 0.3s;
-            text-align: center;
-            margin-top: 50px;
-            transition: font-size 0.2s ease;
+            background-color: #f0f0f0;
         }
-
-        img.center-image {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
-
-        .bio-section {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: left;
-        }
-
         .menu {
             position: fixed;
-            left: 10px;
-            top: 10px;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            z-index: 100;
-        }
-
-        .menu a {
-            color: #000;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .menu a:hover {
-            background-color: #ddd;
-        }
-
-        /* Color Mode Classes */
-        .light-mode {
-            background-color: #f0f0f0;
-            color: #333;
-        }
-
-        .dark-mode {
-            background-color: #333;
-            color: #f0f0f0;
-        }
-
-        .minimal-mode {
-            background-color: #ffffff;
-            color: #333;
-        }
-
-        .unicorn-mode {
-            background-color: #f9c2d7;
-            color: #9c1a80;
-        }
-
-        .solarized-mode {
-            background-color: #002b36;
-            color: #b58900;
-        }
-
-        .matrix-mode {
-            background-color: #000000;
-            color: #00ff00;
-        }
-
-        .orange-mode {
-            background-color: #ff6600;
-            color: #ffffff;
-        }
-
-        .grey-mode {
-            background-color: #d3d3d3;
-            color: #333;
-        }
-
-        /* Sidebar with toggles */
-        .side-stripe {
-            position: fixed;
-            bottom: 10px;
             left: 0;
-            z-index: 10;
-            background-color: black;
-            padding: 20px;
+            top: 0;
+            height: 100%;
+            width: 250px;
+            background-color: #333;
             color: white;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
+            padding-top: 20px;
         }
-
-        /* Footer */
-        footer {
-            margin-top: 20px;
-            text-align: center;
+        .menu a {
+            color: white;
+            padding: 8px 16px;
+            text-decoration: none;
+            display: block;
         }
-
-        /* Font Size */
-        .small-text {
-            font-size: 14px;
+        .menu a:hover {
+            background-color: #575757;
         }
-
-        .medium-text {
-            font-size: 16px;
-        }
-
-        .large-text {
-            font-size: 18px;
-        }
-
-        .map-container {
-            height: 400px;
+        .footer {
+            position: fixed;
+            bottom: 0;
             width: 100%;
-            margin-top: 30px;
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: white;
         }
-
-        /* Quote Section */
-        #quoteSection {
-            margin-top: 30px;
+        .quote-section {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            font-size: 14px;
+            color: white;
         }
-
-        #quoteButton {
+        .content {
+            margin-left: 270px;
+            padding: 20px;
+        }
+        .quote-btn {
             font-size: 12px;
-            background-color: transparent;
+            color: white;
+            background-color: #444;
             border: none;
-            color: #007bff;
+            padding: 5px;
+            margin-top: 10px;
             cursor: pointer;
         }
-
+        .quote-btn:hover {
+            background-color: #666;
+        }
+        .map-container {
+            margin-top: 20px;
+        }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .image-container img {
+            max-width: 300px;
+        }
     </style>
 </head>
-<body class="light-mode">
+<body>
 
-    <!-- Left Menu -->
-    <div class="menu">
-        <a href="#">About</a>
-        <a href="#">Repo</a>
-        <a href="#">Behance</a>
-        <a href="#">Music</a>
-        <a href="#">Instagram</a>
-        <a href="#">What I Do</a>
+<!-- Sidebar Menu -->
+<div class="menu">
+    <a href="#">About</a>
+    <a href="#">Repo</a>
+    <a href="#">Behance</a>
+    <a href="#">Music</a>
+    <a href="#">Instagram</a>
+</div>
+
+<!-- Main Content Area -->
+<div class="content">
+    <div class="image-container">
+        <img src="00000000000000.PNG" alt="A text reading app">
+    </div>
+    <div class="bio-text">
+        <h3>Interactive Developer Santiago</h3>
+        <p>I am an interactive developer working on computer vision projects, with certifications in C++, Swift, and Objective-C.</p>
+        <p>Contact me for projects at <a href="mailto:your-email@example.com">your-email@example.com</a></p>
     </div>
 
-    <!-- Bio Section -->
-    <div class="bio-section">
-        <h1>Interactive Developer Santiago</h1>
-        <p>I'm a passionate developer working on various projects, particularly in computer vision and artificial intelligence. My journey includes certifications in C++, Objective-C, and Swift, and I continue to learn and grow in this ever-evolving field. Feel free to reach out to discuss exciting projects!</p>
-        <p>Email me at <a href="mailto:CORREO">CORREO</a></p>
-        <img class="center-image" src="00000000000000.PNG" alt="A text reading app">
-    </div>
-
-    <!-- Toggle Controls in the Side Stripe -->
-    <div class="side-stripe">
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" id="colorSwitch" onchange="toggleColorMode()">
-            <label class="form-check-label" for="colorSwitch">Toggle Color</label>
+    <!-- Color Scheme and Typography Toggles -->
+    <div class="row" style="position: fixed; bottom: 50px; left: 15px; background-color: black; padding: 10px;">
+        <div class="col">
+            <h6 style="color: white;">Color Scheme</h6>
+            <label class="switch">
+                <input type="checkbox" id="solarized">
+                <span class="slider round"></span> Solarized
+            </label>
+            <label class="switch">
+                <input type="checkbox" id="helloKitty">
+                <span class="slider round"></span> Hello Kitty
+            </label>
+            <label class="switch">
+                <input type="checkbox" id="minimalWhite">
+                <span class="slider round"></span> Minimal White
+            </label>
+            <label class="switch">
+                <input type="checkbox" id="blackGreen">
+                <span class="slider round"></span> Black & Green Yellow
+            </label>
+            <label class="switch">
+                <input type="checkbox" id="whiteFuchsia">
+                <span class="slider round"></span> White & Fuchsia Red
+            </label>
+            <label class="switch">
+                <input type="checkbox" id="blackGreyOrange">
+                <span class="slider round"></span> Black & Grey with Orange
+            </label>
+            <label class="switch">
+                <input type="checkbox" id="grayscale">
+                <span class="slider round"></span> Grayscale
+            </label>
         </div>
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" id="fontSizeSwitch" onchange="toggleFontSize()">
-            <label class="form-check-label" for="fontSizeSwitch">Toggle Font Size</label>
-        </div>
     </div>
 
-    <!-- Map Section (Puente del Arzobispo Providencia) -->
-    <div id="map" class="map-container"></div>
-
-    <!-- Quote Section -->
-    <div id="quoteSection">
-        <p id="quoteText"></p>
-        <p id="quoteAuthor"></p>
-        <button id="quoteButton" onclick="displayRandomQuote()">Get another quote</button>
+    <!-- Map Container -->
+    <div class="map-container">
+        <h5>My Location</h5>
+        <iframe
+            src="https://www.google.com/maps/embed/v1/place?key=YOUR_GOOGLE_MAPS_API_KEY&q=Puente+del+Arzobispo,+Providencia"
+            width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="">
+        </iframe>
     </div>
+</div>
 
-    <!-- Footer Section with Random Quote -->
-    <footer>
-        <div class="footer-quote" id="footerQuote"></div>
-        <p>&copy; All rights reserved</p>
-    </footer>
+<!-- Footer Section -->
+<div class="footer">
+    <div class="quote-section" id="quote-section"></div>
+    <button class="quote-btn" onclick="getNewQuote()">Get another quote</button>
+    <p>All rights reserved ©</p>
+</div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly" async></script>
-    <script>
-        const quotes = [
+<script>
+
+const quotes = [
     { quote: "It is not our abilities that show what we truly are… it is our choices.", author: "J.K. Rowling, Harry Potter and the Chamber of Secrets" },
     { quote: "In three words I can sum up everything I've learned about life: it goes on.", author: "Robert Frost" },
     { quote: "We are all fools in love.", author: "Jane Austen, Pride and Prejudice" },
@@ -266,59 +221,52 @@
     // Add more quotes here up to 300...
 ];
 
-        let currentFontSize = 'medium-text';
-        let currentColorMode = 'light-mode';
 
-        function displayRandomQuote() {
-            const randomIndex = Math.floor(Math.random() * quotes.length);
-            document.getElementById('quoteText').textContent = `"${quotes[randomIndex].quote}"`;
-            document.getElementById('quoteAuthor').textContent = `- ${quotes[randomIndex].author}`;
-            document.getElementById('footerQuote').textContent = `"${quotes[randomIndex].quote}" - ${quotes[randomIndex].author}`;
-        }
+// Display a random quote
+function getNewQuote() {
+    const randomIndex = Math.floor(Math.random() * quotes.length);
+    const quote = quotes[randomIndex];
+    document.getElementById('quote-section').innerText = quote;
+}
 
-        function toggleColorMode() {
-            if (document.getElementById('colorSwitch').checked) {
-                document.body.classList.remove(currentColorMode);
-                document.body.classList.add('dark-mode');
-                currentColorMode = 'dark-mode';
-            } else {
-                document.body.classList.remove(currentColorMode);
-                document.body.classList.add('light-mode');
-                currentColorMode = 'light-mode';
-            }
-        }
+// Initial quote display
+getNewQuote();
 
-        function toggleFontSize() {
-            if (document.getElementById('fontSizeSwitch').checked) {
-                document.body.classList.remove(currentFontSize);
-                document.body.classList.add('large-text');
-                currentFontSize = 'large-text';
-            } else {
-                document.body.classList.remove(currentFontSize);
-                document.body.classList.add('medium-text');
-                currentFontSize = 'medium-text';
-            }
-        }
+// Color scheme toggle logic
+const colorSchemes = {
+    solarized: ['#002b36', '#fdf6e3'], // example colors for Solarized
+    helloKitty: ['#f8bbd0', '#ff69b4'], // example colors for Hello Kitty
+    minimalWhite: ['#ffffff', '#f0f0f0'],
+    blackGreen: ['#000000', '#9e9e2a'],
+    whiteFuchsia: ['#ffffff', '#d500f9'],
+    blackGreyOrange: ['#000000', '#8e8e8e', '#ff7043'],
+    grayscale: ['#b0bec5', '#607d8b']
+};
 
-        function initMap() {
-            const location = { lat: 40.4237, lng: -3.7136 };  // Puente del Arzobispo, Providencia coordinates
-            const map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 15,
-                center: location,
-            });
-            const marker = new google.maps.Marker({
-                position: location,
-                map: map,
-            });
-        }
+function applyColorScheme() {
+    const scheme = Object.keys(colorSchemes).find(scheme => document.getElementById(scheme).checked);
+    if (scheme) {
+        const colors = colorSchemes[scheme];
+        document.body.style.backgroundColor = colors[0];
+        document.body.style.color = colors[1];
+    }
+}
 
-        window.onload = function() {
-            displayRandomQuote();
-        };
+document.querySelectorAll('input[type="checkbox"]').forEach(input => {
+    input.addEventListener('change', applyColorScheme);
+});
 
-    </script>
+// Apply default color scheme
+document.getElementById('minimalWhite').checked = true;
+applyColorScheme();
+
+</script>
+
 </body>
 </html>
+
+
+
 
 
 
